import java.util.ArrayList;

interface Appareil {
    void allumer();
    void eteindre();
}