package PACKAGE_NAME;public class Cheminee {
}
